{
  "version": 4,
  "terraform_version": "1.14.4",
  "serial": 96,
  "lineage": "db891e6e-b84e-3394-45d4-e151aa6b9fb9",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "app_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0c73bd9145b5546f5",
            "arn": "arn:aws:ec2:ap-southeast-2:402961397428:instance/i-06b273883b2385d90",
            "associate_public_ip_address": true,
            "availability_zone": "ap-southeast-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-06b273883b2385d90",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "budget-deploy-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0dde1ab2fa5af1fec"
              }
            ],
            "primary_network_interface_id": "eni-0dde1ab2fa5af1fec",
            "private_dns": "ip-10-0-1-73.ap-southeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.73",
            "public_dns": "ec2-16-176-208-222.ap-southeast-2.compute.amazonaws.com",
            "public_ip": "16.176.208.222",
            "region": "ap-southeast-2",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-07b03d34bf70e4eeb",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0258d8075b29c7a09",
            "tags": {
              "Name": "budget-tracker-app-server"
            },
            "tags_all": {
              "Name": "budget-tracker-app-server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-042bc2043daa1e622"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "402961397428",
            "id": "i-06b273883b2385d90",
            "region": "ap-southeast-2"
          },
          "dependencies": [
            "aws_key_pair.deployer",
            "aws_security_group.app_sg",
            "aws_subnet.public_1",
            "aws_vpc.budget_tracker_vpc",
            "data.aws_ami.ubuntu"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:402961397428:internet-gateway/igw-05a4fae6d6f231a5e",
            "id": "igw-05a4fae6d6f231a5e",
            "owner_id": "402961397428",
            "region": "ap-southeast-2",
            "tags": {
              "Name": "budget-tracker-igw"
            },
            "tags_all": {
              "Name": "budget-tracker-igw"
            },
            "vpc_id": "vpc-07e51482ae9620e7b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.budget_tracker_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:402961397428:route-table/rtb-0780e5e38f5ce12fd",
            "id": "rtb-0780e5e38f5ce12fd",
            "owner_id": "402961397428",
            "propagating_vgws": [],
            "region": "ap-southeast-2",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-05a4fae6d6f231a5e",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "budget-tracker-public-rt"
            },
            "tags_all": {
              "Name": "budget-tracker-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-07e51482ae9620e7b"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "402961397428",
            "id": "rtb-0780e5e38f5ce12fd",
            "region": "ap-southeast-2"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.budget_tracker_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-063b305887b3998c8",
            "region": "ap-southeast-2",
            "route_table_id": "rtb-0780e5e38f5ce12fd",
            "subnet_id": "subnet-0258d8075b29c7a09"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_rt",
            "aws_subnet.public_1",
            "aws_vpc.budget_tracker_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a5791ebb645b783f",
            "region": "ap-southeast-2",
            "route_table_id": "rtb-0780e5e38f5ce12fd",
            "subnet_id": "subnet-078083a9245e98979"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_rt",
            "aws_subnet.public_2",
            "aws_vpc.budget_tracker_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "app_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:402961397428:security-group/sg-042bc2043daa1e622",
            "description": "Allow web traffic to Budget Tracker",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-042bc2043daa1e622",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3001,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3001
              }
            ],
            "name": "budget-tracker-app-sg",
            "name_prefix": "",
            "owner_id": "402961397428",
            "region": "ap-southeast-2",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-07e51482ae9620e7b"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "402961397428",
            "id": "sg-042bc2043daa1e622",
            "region": "ap-southeast-2"
          },
          "dependencies": [
            "aws_vpc.budget_tracker_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:402961397428:security-group/sg-03ee8e9234021a4af",
            "description": "Allow API to reach RDS",
            "egress": [],
            "id": "sg-03ee8e9234021a4af",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-042bc2043daa1e622"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "budget-tracker-db-sg",
            "name_prefix": "",
            "owner_id": "402961397428",
            "region": "ap-southeast-2",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-07e51482ae9620e7b"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "402961397428",
            "id": "sg-03ee8e9234021a4af",
            "region": "ap-southeast-2"
          },
          "dependencies": [
            "aws_security_group.app_sg",
            "aws_vpc.budget_tracker_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:402961397428:subnet/subnet-0258d8075b29c7a09",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2a",
            "availability_zone_id": "apse2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0258d8075b29c7a09",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "402961397428",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-southeast-2",
            "tags": {
              "Name": "budget-tracker-public-1"
            },
            "tags_all": {
              "Name": "budget-tracker-public-1"
            },
            "vpc_id": "vpc-07e51482ae9620e7b"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "402961397428",
            "id": "subnet-0258d8075b29c7a09",
            "region": "ap-southeast-2"
          },
          "dependencies": [
            "aws_vpc.budget_tracker_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:402961397428:subnet/subnet-078083a9245e98979",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2b",
            "availability_zone_id": "apse2-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-078083a9245e98979",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "402961397428",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-southeast-2",
            "tags": {
              "Name": "budget-tracker-public-2"
            },
            "tags_all": {
              "Name": "budget-tracker-public-2"
            },
            "vpc_id": "vpc-07e51482ae9620e7b"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "402961397428",
            "id": "subnet-078083a9245e98979",
            "region": "ap-southeast-2"
          },
          "dependencies": [
            "aws_vpc.budget_tracker_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "budget_tracker_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:402961397428:vpc/vpc-07e51482ae9620e7b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0a6d1b77e4e4b60ea",
            "default_route_table_id": "rtb-0f0edac9df36f3982",
            "default_security_group_id": "sg-0523ff340cc3968de",
            "dhcp_options_id": "dopt-008afb78de08437bc",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-07e51482ae9620e7b",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0f0edac9df36f3982",
            "owner_id": "402961397428",
            "region": "ap-southeast-2",
            "tags": {
              "Name": "budget-tracker-vpc"
            },
            "tags_all": {
              "Name": "budget-tracker-vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "402961397428",
            "id": "vpc-07e51482ae9620e7b",
            "region": "ap-southeast-2"
          }
        }
      ]
    }
  ]
}